Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
 }
 
 body {
-
     background: url(images/bg-intro-mobile.png);
     background-position: top center;
     background-color: var(--red);
@@ -54,7 +53,7 @@ body {
 }
 
 .main p {
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: 300;
     padding: 0 1em;
     margin-top: .5em;
@@ -63,11 +62,10 @@ body {
 
 @media (min-width: 800px) {
     .main h1 {
-        font-size: 3em;
+        font-size: 2em;
         line-height: 1.2;
-        margin: 2em 1em auto 0;
+        margin: 3em 1em auto 0;
         padding-left: 0;
-        margin-left: 0;
         font-weight: 700;
     }
 
@@ -76,6 +74,17 @@ body {
         font-weight: 400;
         margin-left: 0;
         padding: 1em 1em 0 0;
+    }
+}
+
+
+.form.column {
+    font-size: .9em;
+}
+@media (min-width: 800px) {
+    .form.column {
+        /* width: 100%; */
+        font-size: 1.1em;
     }
 }
 
@@ -111,14 +120,12 @@ form {
 input[type=text], input[type=password],
 input[type=submit] {
     font-family: 'Poppins';
-    font-size: 1em;
     margin: 1.2em auto;
     display: block;
-    padding: 1em 1em;
+    padding: 1em;
     width: 80%;
     border-radius: .3em;
     border: 1px solid lightgray;
-
 }
 
 input[type=text], input[type=password] {
@@ -131,7 +138,6 @@ input[type=text]:focus, input[type=password]:focus {
 }
 
 input[type=submit] {
-
     text-transform: uppercase;
     background-color: var(--green);
     width: calc(80% + 30px);
@@ -140,18 +146,16 @@ input[type=submit] {
     margin-bottom: .5em;
     padding: 1.1em 1em;
     border-radius: .4em;
-    font-size: 1em;
+    font-size: .7em;
     font-weight: 500;
-    box-shadow:         inset 0 -4px 1px rgba(26, 103, 70, .5);
-
-
+    box-shadow: inset 0 -4px 1px rgba(26, 103, 70, .5);
 }
 
 .form_footer {
     font-size: .7em;
     text-align: center;
     color: var(--grayish-blue);
-    padding: 0 4em;
+    padding: 0 2em;
     line-height: 2;
 
 }
